--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+					<li class="nav-item"><a href="images/CV/Thilini_CV.pdf" class="nav-link"><span>Resume</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
-					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+					<!-- <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li> -->
 				</ul>
 			</div>
 		</div>
@@ -56,18 +56,20 @@
 				<div class="container">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
-						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/me.jpg); width: 500px; height: 550px;">
+						<div class=" img-container ">
+							<div class="one-third order-md-last img"
+							style="background-image:url(images/Me.png); width: 400px; height: 520px;">
 							<div class="overlay"></div>
+						</div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm <span>Thilini Maheshika</span></h1>
-								<h2 class="mb-4">Web Developer | UI Designer</h2>
-								<p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#"
-										class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+								<h2 class="mb-4">Full Stack Developer | UI Designer</h2>
+								<p><a href="images/CV/Thilini_CV.pdf" class="btn btn-primary py-3 px-4">Download CV</a> <a href="mailto:kthilini1999@gmail.com"
+										class="btn btn-white btn-outline-white py-3 px-4">Hire me</a></p>
 							</div>
 						</div>
 					</div>
@@ -101,7 +103,7 @@
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/me.jpg);">
+							style="background-image:url(images/me2.jpeg);">
 						</div>
 					</div>
 				</div>
@@ -510,224 +512,112 @@
 						</div>
 	
 						<!-- Add more web development projects here -->
-						<!-- Example:
+						<!-- Example: -->
 						<div class="col-md-4">
 							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(images/your_project_image.jpg);">
+								style="background-image: url(images/AP.PNG);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="https://your_project_link">Your Project Name</a></h3>
+									<h3><a href="https://github.com/thilini-maheshika/Artist-Portfolio.git">Artist Portfolio</a></h3>
 									<span>Web Development</span>
 								</div>
 							</div>
-						</div> -->
+						</div> 
+
+						<div class="col-md-4">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/cuticare.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/thilini-maheshika/CutiCare_Research.git">Cuticare- Mobile App</a></h3>
+									<span>Web Development</span>
+								</div>
+							</div>
+						</div> 
+
+						<div class="col-md-4">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+								style="background-image: url(images/todo.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/thilini-maheshika/todo_app.git">Todo-App</a></h3>
+									<span>Web Development</span>
+								</div>
+							</div>
+						</div> 
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<!-- <section class="ftco-section" id="blog-section">
+	<section class="ftco-section" id="blog-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Blog</h1>
-					<h2 class="mb-4">Our Blog</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<h2 class="mb-4">My Blog</h2>
+					<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 				</div>
 			</div>
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+						<a href="https://medium.com/@kthilini1999/mastering-rest-api-development-best-practices-developer-should-embrace-for-clean-code-8a0951a0b50f" class="block-20" style="background-image: url('images/image_1.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">June 21, 2019</span>
+									<span class="mr-2">February 23, 2024</span>
 									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+									<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+							<h3 class="heading"><a href="https://medium.com/@kthilini1999/mastering-rest-api-development-best-practices-developer-should-embrace-for-clean-code-8a0951a0b50f">Mastering REST API Development: Best Practices Developer Should Embrace for Clean Code</a>
 							</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>REST APIs are crucial for data exchange, powering mobile apps, and enterprise systems. Clean code is essential for developers to ensure...</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+						<a href="https://medium.com/@kthilini1999/the-use-of-mvp-for-launching-successful-applications-29edddb78712" class="block-20" style="background-image: url('images/image_2.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">June 21, 2019</span>
+									<span class="mr-2">March 07, 2024</span>
 									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+									<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+							<h3 class="heading"><a href="https://medium.com/@kthilini1999/the-use-of-mvp-for-launching-successful-applications-29edddb78712">The Use of MVP for Launching Successful Applications</a>
 							</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>MVP, or Minimum Viable Product, is a development approach that helps teams launch products quickly and efficiently...</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+						<a href="https://medium.com/@kthilini1999/from-bugs-to-brilliance-the-role-of-unit-testing-in-next-js-7a5e2e4e8908" class="block-20" style="background-image: url('images/image_3.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">June 21, 2019</span>
+									<span class="mr-2">May 10, 2024</span>
 									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+									<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+							<h3 class="heading"><a href="https://medium.com/@kthilini1999/from-bugs-to-brilliance-the-role-of-unit-testing-in-next-js-7a5e2e4e8908">From Bugs to Brilliance: The Role of Unit Testing in Next Js</a>
 							</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>Unit testing is essential in software development for ensuring code reliability, catching bugs early, facilitating refactoring, and improving overall...</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
-	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
-		<div class="container">
-			<div class="row d-md-flex align-items-center">
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18">
-						<div class="text">
-							<strong class="number" data-number="100">0</strong>
-							<span>Awards</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18">
-						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
-							<span>Complete Projects</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18">
-						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
-							<span>Happy Customers</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18">
-						<div class="text">
-							<strong class="number" data-number="500">0</strong>
-							<span>Cups of coffee</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-7 ftco-animate text-center">
-					<h2>I'm <span>Available</span> for freelancing</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
-		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Contact</h1>
-					<h2 class="mb-4">Contact Me</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-				</div>
-			</div>
-
-			<div class="row d-flex contact-info mb-5">
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-map-signs"></span>
-						</div>
-						<h3 class="mb-4">Address</h3>
-						<p>198 West 21th Street, Suite 721 New York NY 10016</p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-phone2"></span>
-						</div>
-						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel://1234567920">+ 1235 2355 98</a></p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-paper-plane"></span>
-						</div>
-						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-globe"></span>
-						</div>
-						<h3 class="mb-4">Website</h3>
-						<p><a href="#">yoursite.com</a></p>
-					</div>
-				</div>
-			</div>
-
-			<div class="row no-gutters block-9">
-				<div class="col-md-6 order-md-last d-flex">
-					<form action="#" class="bg-light p-4 p-md-5 contact-form">
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Your Name">
-						</div>
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Your Email">
-						</div>
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Subject">
-						</div>
-						<div class="form-group">
-							<textarea name="" id="" cols="30" rows="7" class="form-control"
-								placeholder="Message"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-						</div>
-					</form>
-
-				</div>
-
-				<div class="col-md-6 d-flex">
-					<div class="img" style="background-image: url(images/about.jpg);"></div>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
 
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
