added image to home section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						data-scrollax-parent="true">
 						<div class=" img-container ">
 							<div class="one-third order-md-last img"
-							style="background-image:url(images/Me.png); width: 400px; height: 520px;">
+							style="background-image:url(images/me.png); width: 400px; height: 520px;">
 							<div class="overlay"></div>
 						</div>
 						</div>
